--- a/app/views/user/home/index/_mine.html.erb
+++ b/app/views/user/home/index/_mine.html.erb
@@ -6,9 +6,8 @@
       <div class="main_profile edit_section">
         <div class="author">
           <div class="author_thumb veryfied">
-            <i class="bi bi-check"></i>
             <figure>
-              <img src="img/avatar1.jpg" data-src="img/avatar1.jpg" alt="" class="lazy loaded" width="100" height="100" data-was-processed="true">
+              <img src="/img/avatar1.jpg" data-src="/img/avatar1.jpg" alt="" class="lazy loaded" width="100" height="100" data-was-processed="true">
             </figure>
           </div>
         </div>
@@ -16,6 +15,8 @@
         <ul>
           <li><a href="javascript:void(0)"><i class="bi bi-cash-coin"></i><span id="span_my_token">- NUF</span></a></li>
           <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">- NFT</span></a></li>
+          <div>Copy to invite:</div>
+          <small id="span_my_url">-</small>
         </ul>
       </div>
     </div>
@@ -39,9 +40,14 @@
 
 <script>
     function load_mine_data() {
+        if (registered) {
+            load_my_info();
+            load_my_nft();
+        }
     }
 
     function load_my_info() {
+        $('#span_my_url').text('<%= Utils::Constants::BASE_URI %>?i=' + address);
         Business.get(
             '/user/users/my_info', {address: address},
             function (data) {
@@ -107,12 +113,10 @@
         });
     }
 
-    $(function () {
-        call_backs.push(
-            function () {
-                load_my_info();
-                load_my_nft();
-            }
-        );
-    });
+    call_backs.push(
+        function () {
+            load_my_info();
+            load_my_nft();
+        }
+    );
 </script>
