--- a/app/views/user/home/index/_contact.html.erb
+++ b/app/views/user/home/index/_contact.html.erb
@@ -6,12 +6,17 @@
       <div class="box_contacts">
         <i class="bi bi-twitter"></i>
         <h2>Twitter</h2>
-        <a href="#0">help@magellano.com</a>
+        <a href="https://twitter.com/Unicorns_Web">Unicorns_NFT</a>
       </div>
       <div class="box_contacts">
-        <i class="bi bi-facebook"></i>
-        <h2>Facebook</h2>
-        <a href="#0">info@magellano.com</a>
+        <i class="bi bi-discord"></i>
+        <h2>Discord</h2>
+        <a href="">info@magellano.com</a>
+      </div>
+      <div class="box_contacts">
+        <i class="bi bi-telegram"></i>
+        <h2>Telegram</h2>
+        <a href="https://t.me/unicornsNFT">Unicorns_NFT global OW</a>
       </div>
     </div>
   </div>
