--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -29,6 +29,7 @@
   <script src="/color-admin/plugins/ladda/spin.min.js"></script>
   <script src="/color-admin/plugins/ladda/ladda.min.js"></script>
   <script src="/color-admin/plugins/ladda/ladda.jquery.min.js"></script>
+  <script src="/color-admin/plugins/clipboard.min.js"></script>
   <script src="/static/js/web3.min.js"></script>
   <script src="/static/js/getWeb3.js"></script>
   <script src="/static/js/constants.js"></script>
