--- a/app/views/user/home/index/_contact.html.erb
+++ b/app/views/user/home/index/_contact.html.erb
@@ -11,7 +11,7 @@
       <div class="box_contacts">
         <i class="bi bi-discord"></i>
         <h2>Discord</h2>
-        <a href="">info@magellano.com</a>
+        <a href="https://discord.com/invite/unicorns-nft">Unicorns-nft</a>
       </div>
       <div class="box_contacts">
         <i class="bi bi-telegram"></i>
