--- a/app/views/user/home/index/_home.html.erb
+++ b/app/views/user/home/index/_home.html.erb
@@ -237,7 +237,13 @@
                         swal('Error', err.message, 'error');
                     });
             } else {
-                register();
+                contract.methods.buy(level).send({from: address})
+                    .on('transactionHash', hash => {
+                        swal('Success', 'You have purchased successfully. Please wait for blockchain confirmation.', 'success');
+                    })
+                    .on('error', (err) => {
+                        swal('Error', err.message, 'error');
+                    });
             }
         });
     }
