--- a/app/views/admin/withdraws/index.html.erb
+++ b/app/views/admin/withdraws/index.html.erb
@@ -54,7 +54,7 @@
             uniqueId: "id",
             columns: [
                 {field: 'id', title: 'ID'},
-                {field: 'amount', title: 'NUF数量'},
+                {field: 'amount', title: 'USDT数量'},
                 {field: 'address', title: '地址'},
                 {field: 'state_name', title: '状态'},
                 {field: 'created_at', title: '创建时间'},
