--- a/app/views/user/home/index/_benefit.html.erb
+++ b/app/views/user/home/index/_benefit.html.erb
@@ -36,7 +36,7 @@
     }
 
     function load_flows() {
-        let symbol = 'NUF', container = $('#token_flows'), div_no_record = $('#no_record'),
+        let symbol = 'USDT', container = $('#token_flows'), div_no_record = $('#no_record'),
             div_load_more = $('#load_more'), has_collect = false;
         div_load_more.hide();
         Business.get(
