--- a/app/views/user/withdraws/index.html.erb
+++ b/app/views/user/withdraws/index.html.erb
@@ -19,7 +19,7 @@
                     html += '<div class="text-gray-dark m-b-20">\n' +
                         '  <div class="row">\n' +
                         '    <div class="col-12">\n' +
-                        '      <h4>' + item.formatted_amount + ' NUF</h4>\n' +
+                        '      <h4>' + item.formatted_amount + ' USDT</h4>\n' +
                         '    </div>\n' +
                         '  </div>\n' +
                         '  <div class="row">' +
