--- a/app/views/user/home/index/_mine.html.erb
+++ b/app/views/user/home/index/_mine.html.erb
@@ -13,7 +13,7 @@
         </div>
         <h4 id="my_address"></h4>
         <ul>
-          <li><a href="javascript:void(0)"><i class="bi bi-cash-coin"></i><span id="span_my_token">- NUF</span></a> <a href="/user/withdraws/new" class="pull-right"><i class="bi bi-wallet"></i>Withdraw</a></li>
+          <li><a href="javascript:void(0)"><i class="bi bi-cash-coin"></i><span id="span_my_token">- USDT</span></a> <a href="/user/withdraws/new" class="pull-right"><i class="bi bi-wallet"></i>Withdraw</a></li>
           <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">- NFT</span></a></li>
           <li>
             <a href="javascript:void(0)"><i class="fas fa-user"></i><span id="span_children_count">- Children</span></a>
@@ -64,7 +64,7 @@
         Business.get(
             '/user/users/my_info', {address: address},
             function (data) {
-                $('#span_my_token').text(data.formatted_token_balance + ' NUF');
+                $('#span_my_token').text(data.formatted_token_balance + ' USDT');
             }
         );
     }
