--- a/app/views/user/home/index/_home.html.erb
+++ b/app/views/user/home/index/_home.html.erb
@@ -19,7 +19,7 @@
 <div class="container margin_90_90">
   <div class="main_title center">
     <span><em></em></span>
-    <h2>Unicorns NFT</h2>
+    <h2>Unicorns Alternative</h2>
     <p>CONNECT YOUR WEB3.0 NFT</p>
   </div>
   <!-- /main_title -->
