--- a/app/views/user/home/index/_mine.html.erb
+++ b/app/views/user/home/index/_mine.html.erb
@@ -14,7 +14,7 @@
         <h4 id="my_address"></h4>
         <ul>
           <li><a href="javascript:void(0)"><i class="bi bi-cash-coin"></i><span id="span_my_token">- USDT</span></a> <a href="/user/withdraws/new" class="pull-right"><i class="bi bi-wallet"></i>Withdraw</a></li>
-          <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">- NFT</span></a></li>
+          <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">Total lnvestment: - USDT </span></a></li>
           <li>
             <a href="javascript:void(0)"><i class="fas fa-user"></i><span id="span_children_count">- Children</span></a>
           </li>
@@ -65,6 +65,7 @@
             '/user/users/my_info', {address: address},
             function (data) {
                 $('#span_my_token').text(data.formatted_token_balance + ' USDT');
+                $('#span_my_nft').text('Total investment: ' + data.investment + ' USDT');
             }
         );
     }
@@ -89,7 +90,6 @@
     function load_my_nft() {
         $('#my_nft_container').empty();
         contract.methods.tokensOfOwner(address).call().then(rs => {
-            $('#span_my_nft').text(rs.length + ' NFT');
             if (rs.length === 0) {
                 $('#no_nft').show();
             } else {
