--- a/app/views/user/home/index/_mine.html.erb
+++ b/app/views/user/home/index/_mine.html.erb
@@ -14,7 +14,7 @@
         <h4 id="my_address"></h4>
         <ul>
           <li><a href="javascript:void(0)"><i class="bi bi-cash-coin"></i><span id="span_my_token">- USDT</span></a> <a href="/user/withdraws/new" class="pull-right"><i class="bi bi-wallet"></i>Withdraw</a></li>
-          <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">Total lnvestment: - USDT </span></a></li>
+          <li><a href="javascript:void(0)"><i class="bi bi-images"></i><span id="span_my_nft">Total investment: - USDT </span></a></li>
           <li>
             <a href="javascript:void(0)"><i class="fas fa-user"></i><span id="span_children_count">- Children</span></a>
           </li>
